# work_oop

./: .gitignore  Readme.md  pyproject.toml
src/: BaseProduct.py  InfoMixin.py  LawnGrass.py  Smartphone.py  category.py  main.py  main2.py  product.py  shop.py
test/: test_LawnGrass_Smartphone.py  test_category_product.py  test_category_product_2.py  test_shop.py
