[project]
name  = "pythonproject-homework-for-oop"
version = "0.1.0"
description = ""
authors = [
    {name = "Anna",email = "mirzeyevaaygun34@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
isort = "^6.0.1"
flake8 = "^7.3.0"
black = "^25.1.0"
pytest-cov = "^6.2.1"

